Bugfix: editor view now have a scrollbar

--- a/shop/src/styles/editor-view.css
+++ b/shop/src/styles/editor-view.css
@@ -5,6 +5,7 @@
   height: 100vh;
   position: fixed;
   right: 0;
+  overflow-y: scroll;
 }
 
 .stats-element, .upgradesection  {
